--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</HEADER>
 		<ul style="position: sticky;">	
 			<li class="nav-li">
-				<a href="HOMEPAGE.html"  class="abc"> HOME </a>
+				<a href="index.html"  class="abc"> HOME </a>
 			</li>
 			<li class="nav-li">
 				<a target="_black" href="pages\main-page\index.html"  class="abc">
