--- a/pages/Assignments/index.html
+++ b/pages/Assignments/index.html
@@ -18,7 +18,7 @@
 	</HEADER>
 		<ul style="position: sticky;">	
 			<li class="nav-li">
-				<a target="_blank" href="..\..\HOMEPAGE.html"  class="abc"> HOME </a>
+				<a target="_blank" href="..\..\index.html"  class="abc"> HOME </a>
 			</li>	
 			<li class="nav-li">
 				<a target="_blank" href="..\main-page\index.html"  class="abc">
