--- a/pages/contect-me/Contect-Me.html
+++ b/pages/contect-me/Contect-Me.html
@@ -20,7 +20,7 @@
 	
 		<ul>	
 			<li>
-				<a target="_blank" href="..\..\HOMEPAGE.html"  class="abc"> HOME </a>
+				<a target="_blank" href="..\..\index.html"  class="abc"> HOME </a>
 			</li>	
 			<li>
 				<a target="_blank" href="..\main-page\index.html"  class="abc">
