--- a/pages/sign-up/Sign-Up.html
+++ b/pages/sign-up/Sign-Up.html
@@ -18,7 +18,7 @@
 	
 		<ul style="position: sticky;">	
 			<li>
-				<a target="_blank" href="..\..\HOMEPAGE.html"  class="abc"> HOME </a>
+				<a target="_blank" href="..\..\index.html"  class="abc"> HOME </a>
 			</li>	
 			<li>
 				<a target="_blank" href="..\main-page\index.html"  class="abc">
