--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 			<li class="nav-li">
-				<a target="_black" href="pages\google-design\index.html">EXHIBITION PROJECT </a>
+				<a target="_black" href="pages\exhibition-project\index.html">EXHIBITION PROJECT </a>
 			</li>
 
 			<li class="nav-li">
